<resources>
    <string name="app_name">Fund Management</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_fund_management">FundManagement</string>
    <string name="deposit">Deposit</string>
    <string name="instruction">Instruction</string>
    <string name="amount">Amount</string>
    <string name="tenure">Tenure</string>
    <string name="interest_withdrawal">Interest Withdrawal</string>
    <string name="encashment">Encashment</string>
    <string name="pending">Pending</string>
    <string name="submit">Submit</string>
    <string name="renewal_with_principal_and_interest">Renewal With Principal and Interest</string>
    <string name="auto_renewal_after_period_months">Auto Renewal After (Period) Months</string>
    <string name="rate">Rate (%)</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="create_new_fixed_deposit_receipt_fdr">Create New Fixed Deposit Receipt (FDR)</string>
</resources>