<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.depositform.DepositFormActivity"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_fixed_deposit_receipt_fdr"
            android:id="@+id/deposit_form_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="16dp"
            android:textStyle="bold"
            />
<!--        edit text with icon in left-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:layout_margin="4dp"
        >
        <ImageView
            android:layout_margin="4dp"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/taka"
            android:contentDescription="Taka" />
        <EditText
            android:id="@+id/deposit_form_amount"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number"
            android:hint="@string/deposit_amount"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <Spinner
            android:id="@+id/deposit_form_duration"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.6"
            android:layout_margin="4dp"
            android:gravity="center"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/deposit_form_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/rate"
            android:textSize="24sp"
            android:textAlignment="center"
            />

    </LinearLayout>
    <Spinner
        android:id="@+id/deposit_form_source_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textAlignment="center"
        />
    <Spinner
        android:id="@+id/deposit_form_branch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="40sp"
            android:id="@+id/deposit_form_auto_renewal_switch"
            />
        <TextView
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.8"
            android:text="@string/auto_renewal_after_period_months"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="40sp"
            android:id="@+id/deposit_form_renewal_with_interest_switch"
            />
        <TextView
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.8"
            android:text="@string/renewal_with_principal_and_interest"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="16dp"
        android:text="@string/submit"
        android:id="@+id/deposit_form_submit_button"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/instruction"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="1. Eligibility\n2. Eligibility\n2. Eligibility\n2. Eligibility\n2. Eligibility"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>